5 errors working on getProductsBy